--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  carousel_slider: ^4.2.0
+  image_picker: ^0.8.7+1
+  path_provider: ^2.0.14
+  cached_network_image: ^3.1.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl: ^0.17.0
   http: ^0.13.5
+  shared_preferences: any
+  fluttertoast: any
   get: ^4.3.8
 
 
