--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.0
-  image_picker: ^0.8.7+1
+  image_picker: ^0.8.4+4  
   path_provider: ^2.0.14
   cached_network_image: ^3.1.0
+  animated_text_kit: ^4.2.1
+  path: ^1.8.0
+  quickalert: ^1.0.1
+  dio: ^4.0.0
   get: ^4.6.5
 
 dev_dependencies:
