--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   image_picker: ^0.8.4+4  
   path_provider: ^2.0.14
   cached_network_image: ^3.1.0
-  animated_text_kit: ^4.2.1
+  animated_text_kit: ^4.2.1 
+  badges: ^3.1.1
+
   path: ^1.8.0
   quickalert: ^1.0.1
   dio: ^4.0.0
