--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   path_provider: ^2.0.14
   cached_network_image: ^3.1.0
   animated_text_kit: ^4.2.1 
+  flutter_rating_bar: ^4.0.1
   scroll_snap_list: ^0.9.1
+  provider: ^6.0.5
+  shared_preferences: ^2.0.8
   badges: ^3.1.1
 
   path: ^1.8.0
