--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,16 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.0.8
   badges: ^3.1.1
+  google_maps_flutter: ^2.2.6
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  awesome_dialog: ^3.0.2
+  location: ^4.2.0
+  google_map_polyline_new: ^0.3.0+2
+
+
+
+
 
   path: ^1.8.0
   quickalert: ^1.0.1
