--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,11 @@ dependencies:
   google_maps_flutter: ^2.2.6
   geolocator: ^9.0.2
   geocoding: ^2.1.0
-  awesome_dialog: ^3.0.2
   location: ^4.2.0
   google_map_polyline_new: ^0.3.0+2
   firebase_messaging: ^14.6.2
   flutter_local_notifications: ^14.1.0
+  flutter_tawk: ^0.1.0
 
 
 
@@ -60,14 +60,14 @@ dependencies:
 
   path: ^1.8.0
   quickalert: ^1.0.1
-  dio: ^4.0.0
+  dio: ^4.0.6
   get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl: ^0.17.0
-  http: ^0.13.5
+  http: ^0.13.6
   fluttertoast: any
 
 
